--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "editor.minimap.enabled": false,
+    "launch": {
+    
+        "configurations": [],
+        "compounds": []
+    }
 }
