falta o resto da home do projeto quazzu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "git.ignoreLimitWarning": true,
     "editor.minimap.enabled": false,
+    "editor.formatOnSave": true,
     "launch": {
     
         "configurations": [],
